fix for mobile scroll overlaps wrapper

--- a/dev/src/scss/all.scss
+++ b/dev/src/scss/all.scss
@@ -126,6 +126,7 @@ textarea {
 	width: 100%;
 	height: 100%;
 	table-layout: fixed;
+	overflow: hidden;
 }
 .index-title {
 	text-align: center;
